switch to firebase

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   "homepage": "https://github.com/davidalexandercurrie/hopes-and-dreams-of-the-ghosts#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "firebase": "^8.1.1",
     "lodash": "^4.17.20",
-    "nedb": "^1.8.0",
     "socket.io": "^3.0.3"
   }
 }
